<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.work.stevegiller.co.uk.estatescalls.SwCallDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewCallDetailsHeader"
        android:layout_below="@+id/textViewAppTitle"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCustomer"
        android:id="@+id/textViewCustomerLabel"
        android:layout_below="@+id/textViewCallDetailsHeader"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewTargetLabel"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:ellipsize="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCallContact"
        android:layout_below="@+id/textViewCallDetailsHeader"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCustomerName"
        android:layout_below="@+id/textViewCallDetailsHeader"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_toEndOf="@+id/textViewCustomerLabel"
        android:layout_toStartOf="@+id/textViewCallContact"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSite"
        android:id="@+id/textViewSiteLabel"
        android:layout_below="@+id/textViewCustomerLabel"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewCustomerLabel"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:ellipsize="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCallSite"
        android:layout_below="@+id/textViewCustomerLabel"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_toEndOf="@+id/textViewCustomerLabel"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFixTarget"
        android:id="@+id/textViewTargetLabel"
        android:layout_below="@+id/textViewSiteLabel"
        android:layout_alignParentStart="true"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:ellipsize="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFixTarget"
        android:layout_below="@+id/textViewCallSite"
        android:layout_toEndOf="@+id/textViewCustomerLabel"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCallSummary"
        android:layout_below="@+id/textViewTargetLabel"
        android:layout_alignParentStart="true"
        android:textStyle="bold|italic" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewCallDiary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewCallSummary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/derbycollege"
        android:id="@+id/textViewCollegeName"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_toEndOf="@+id/imageViewCollegeLogo"
        android:paddingLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textViewAppTitle"
        android:layout_below="@+id/textViewCollegeName"
        android:layout_alignParentEnd="true"
        android:textStyle="bold|italic"
        android:textSize="32sp"
        android:layout_toEndOf="@+id/imageViewCollegeLogo"
        android:paddingLeft="16dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewCollegeLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/derby_college"
        android:layout_above="@+id/textViewCallDetailsHeader" />
</RelativeLayout>
